Fix: Avoid Java bug caused by readString for readPreferencesFile (#2906)
* Fix: Avoid Java bug caused by readString for readPreferencesFile

* Handle all exceptions while reading preferences file